# company-brain

./: .gitignore  AGENTS.md  API.md  BRIEF.md  DEPLOY.md  DOCKER.md  Dockerfile.dev  README.md  SAMPLE_QUESTIONS.md  docker-compose.dev.yml
.cursor/rules/: project-spec.mdc
backend/: .env.example  .gitignore  agent.py  main.py  pyproject.toml  railway.json
backend/data/kb/: DOC-001.md  DOC-002.md  DOC-003.md  DOC-004.md  DOC-005.md  DOC-006.md  DOC-007.md  DOC-008.md  DOC-009.md  DOC-010.md  DOC-011.md  DOC-012.md  DOC-013.md  DOC-014.md  DOC-015.md  DOC-016.md  DOC-017.md  DOC-018.md  DOC-019.md  DOC-020.md  DOC-021.md  DOC-022.md  DOC-023.md  DOC-024.md  DOC-025.md  DOC-026.md  DOC-027.md  DOC-028.md  DOC-029.md  DOC-030.md  DOC-031.md  DOC-032.md  DOC-033.md  DOC-034.md  DOC-035.md
backend/static/: index.html
