[project]
name = "company-brain-starter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    # --- Suggested extras: uncomment what you need, then run `uv sync` ---
    # RAG / retrieval over data/kb/ (pick your approach):
    # "rank-bm25>=0.2.2",        # lightweight lexical retrieval, zero infra
    # "chromadb>=1.4.1",         # embedded vector store
    # "faiss-cpu>=1.13.2",       # in-memory vector index
    # Binary artifact generation (docx / pptx / pdf / xlsx questions):
    # "python-docx>=1.2.0",
    # "python-pptx>=1.0.2",
    # "fpdf2>=2.8.7",
    # "openpyxl>=3.1.5",         # Excel (.xlsx) workbooks
]
